evergreen Xv: remove stray line that caused a segfault

fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=29788